<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myApplication="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context="com.example.sajjad.market.Activity.LoginRegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/login_register_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/login_register_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            myApplication:layout_collapseMode="pin"
            myApplication:title="@string/login_activity_title" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/user_name_login"
                android:textSize="@dimen/standard_text_size" />

            <EditText
                android:id="@+id/user_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_margin"
                android:layout_marginRight="@dimen/form_margin"
                android:layout_marginTop="@dimen/standard_margin_x2"
                android:ems="10"
                android:background="@drawable/login_form_frame"
                android:hint="@string/user_name_login_edit_text"
                android:imeOptions="actionNext"
                android:padding="@dimen/standard_margin" />

            <TextView
                android:id="@+id/password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin_x2"
                android:text="@string/password_login"
                android:textSize="@dimen/standard_text_size" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginLeft="@dimen/form_margin"
                android:layout_marginRight="@dimen/form_margin"
                android:layout_marginTop="@dimen/standard_margin_x2"
                android:background="@drawable/login_form_frame"
                android:hint="@string/password_login"
                android:padding="@dimen/standard_margin" />


            <CheckBox
                android:id="@+id/show_password_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="@dimen/standard_margin_x2"
                android:text="@string/show_password" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_margin_x2"
                android:layout_marginRight="@dimen/form_margin_x2"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/sign_in"
                android:textSize="@dimen/standard_text_size_x1.5" />

            <TextView
                android:id="@+id/forgot_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/standard_margin_x8"
                android:text="@string/forgot_password"
                android:textSize="@dimen/standard_text_size" />

            <TextView
                android:id="@+id/register_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/standard_margin_x2"
                android:layout_marginTop="@dimen/standard_margin_x4"
                android:text="@string/register"
                android:textSize="@dimen/standard_text_size_x1.5" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
