<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myApplication="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.sajjad.market.Activity.MainActivity">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                myApplication:layout_scrollFlags="scroll|enterAlways"
                myApplication:title="چهار نعل"/>


        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:background="@color/background_main_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            myApplication:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true">



                <ss.com.bannerslider.views.BannerSlider
                    android:id="@+id/banner_slider_main_page"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/banner_height"
                    myApplication:animateIndicators="true"
                    myApplication:defaultIndicators="circle"
                    myApplication:interval="3000"
                    myApplication:loopSlides="true" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_category_main_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layoutDirection="rtl" />

                <TextView
                    android:id="@+id/special_offer_text_view_main_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/standard_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:text="@string/special_offer"
                    android:textSize="@dimen/standard_text_size_x1.5" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_special_offer_main_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layoutDirection="rtl" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:adjustViewBounds="true"
                    android:src="@drawable/store_banner" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ad_banner" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin">

                    <Button
                        android:id="@+id/see"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/most_sales_text_view_main_page"
                        android:layout_alignParentLeft="true"
                        android:layout_alignTop="@+id/most_sales_text_view_main_page"
                        android:layout_marginLeft="@dimen/standard_margin"
                        android:background="@android:color/transparent"
                        android:textColor="@color/text_see_list"
                        android:text="@string/see_full_list" />

                    <TextView
                        android:id="@+id/most_sales_text_view_main_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/standard_margin"
                        android:text="@string/most_sales"
                        android:textSize="@dimen/standard_text_size_x1.5" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_most_sales_main_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layoutDirection="rtl" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/newests_text_view_main_page"
                        android:layout_alignParentLeft="true"
                        android:layout_alignTop="@+id/newests_text_view_main_page"
                        android:layout_marginLeft="@dimen/standard_margin"
                        android:background="@android:color/transparent"
                        android:textColor="@color/text_see_list"
                        android:text="@string/see_full_list" />

                    <TextView
                        android:id="@+id/newests_text_view_main_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/standard_margin"
                        android:text="@string/newests"
                        android:textSize="@dimen/standard_text_size_x1.5" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_newests_main_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layoutDirection="rtl" />


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        myApplication:headerLayout="@layout/layout_header_navigation"
        myApplication:menu="@menu/navigation_menu" />


</android.support.v4.widget.DrawerLayout>

